[gd_scene load_steps=4 format=3 uid="uid://5ac7ttyyv5p5"]

[ext_resource type="Script" path="res://addons/datatable_godot/ui/schema/new_table/dict_win_schema.gd" id="1_g8ls3"]
[ext_resource type="Texture2D" uid="uid://bh4utwbo8c1th" path="res://addons/datatable_godot/icons/String.svg" id="2_2nl64"]
[ext_resource type="Texture2D" uid="uid://d4af0scr4f3ea" path="res://addons/datatable_godot/icons/Add.svg" id="3_sbbmy"]

[node name="DictSchema" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8ls3")

[node name="ParamName" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true

[node name="ParamValue" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="rootValue" type="HBoxContainer" parent="ParamValue"]
layout_mode = 2

[node name="rootName" type="LineEdit" parent="ParamValue/rootValue"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="rootType" type="OptionButton" parent="ParamValue/rootValue"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
popup/item_0/text = "String"
popup/item_0/icon = ExtResource("2_2nl64")
popup/item_0/id = 0

[node name="rootAdd" type="Button" parent="ParamValue/rootValue"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
disabled = true
text = "  X  "
icon = ExtResource("3_sbbmy")
icon_alignment = 1

[node name="VSeparator" type="HSeparator" parent="ParamValue"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ParamValue"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="ScrollContainer" type="ScrollContainer" parent="ParamValue/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="itemList" type="VBoxContainer" parent="ParamValue/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="ParamValue"]
layout_mode = 2
